clusters/cluster/apps/neuland-app/ersti-kit-prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ersti-kit-production
  namespace: neuland-app
spec:
  minReadySeconds: 3
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 60
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: ersti-kit-production
  template:
    metadata:
      labels:
        app: ersti-kit-production
    spec:
      containers:
        - name: ersti-kit-production
          image: ghcr.io/neuland-ingolstadt/ersti-hilfe-kit:main-26 # {"$imagepolicy": "flux-system:ersti-kit-prod"}
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 300m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 32Mi
